app: prevent touch actions on mobile
- enables better testing of teleop on standalone pages

--- a/cloud/app/public/style.css
+++ b/cloud/app/public/style.css
@@ -30,3 +30,7 @@ a, .btn-link {
 .sidebar .nav-item:hover {
   background-color: #15362b !important;
 }
+
+body {
+  touch-action: none;
+}
